# python-project-49

./: .gitignore  .pyproject.toml.swo  .pyproject.toml.swp  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: .game_starter.py.swo  .game_starter.py.swp  game_starter.py
brain_games/games/: .brain_even.swp  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: .brain_even.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
